--- a/app/assets/stylesheets/Copy of custom.css.scss
+++ b/app/assets/stylesheets/Copy of custom.css.scss
@@ -3,9 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "bootstrap";
 
-/* mixins, variables, etc. */
-$grayMediumLight: #eaeaea;
-
 /* universal */
 
 html {
@@ -26,9 +23,10 @@ resize: vertical;
 
 .center {
 text-align: center;
-h1 {
-margin-bottom: 10px;
 }
+
+.center h1 {
+margin-bottom: 10px;
 }
 
 /* typography */
@@ -50,7 +48,7 @@ letter-spacing: -1px;
 margin-bottom: 30px;
 text-align: center;
 font-weight: normal;
-color: $grayLight;
+color: #999;
 }
 
 p {
@@ -64,16 +62,17 @@ line-height: 1.7em;
 float: left;
 margin-right: 10px;
 font-size: 1.7em;
-color: white;
+color: #fff;
 text-transform: uppercase;
 letter-spacing: -1px;
 padding-top: 9px;
 font-weight: bold;
 line-height: 1;
-&:hover {
-color: white;
-text-decoration: none;
 }
+
+#logo:hover {
+color: #fff;
+text-decoration: none;
 }
 
 /* footer */
@@ -81,23 +80,28 @@ text-decoration: none;
 footer {
 margin-top: 45px;
 padding-top: 5px;
-border-top: 1px solid $grayMediumLight;
-color: $grayLight;
-a {
-color: $gray;
-&:hover {
-color: $grayDarker;
+border-top: 1px solid #eaeaea;
+color: #999;
 }
+
+footer a {
+color: #555;
 }
-small {
+
+footer a:hover {
+color: #222;
+}
+
+footer small {
 float: left;
 }
-ul {
+
+footer ul {
 float: right;
 list-style: none;
-li {
+}
+
+footer ul li {
 float: left;
 margin-left: 10px;
-}
-}
 }
